--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "node ./test.js"
+    "build:common": "webpack --config ./webpack.commont.js",
+    "postinstall": "npm install && npm run build:common"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/FFBest/my-npm-test/issues"
   },
-  "homepage": "https://github.com/FFBest/my-npm-test#readme"
+  "homepage": "https://github.com/FFBest/my-npm-test#readme",
+  "dependencies": {
+    "jquery": "^1.12.4",
+    "lodash": "^4.17.15"
+  },
+  "devDependencies": {
+    "expose-loader": "^1.0.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  }
 }
