--- a/package.json
+++ b/package.json
@@ -17,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/FFBest/my-npm-test/issues"
   },
-  "homepage": "https://github.com/FFBest/my-npm-test#readme"
+  "homepage": "https://github.com/FFBest/my-npm-test#readme",
+  "dependencies": {
+    "jquery": "^1.12.4",
+    "lodash": "^4.17.15"
+  },
+  "devDependencies": {
+    "expose-loader": "^1.0.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  }
 }
